--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -7,17 +7,21 @@
 <body>
     <div> <H1> DESCRIPCION PERSONAL</H1>
         <p>Mi nombre es ivan erazo, soy colombiano de 26 años de edad, trabajo como adminitrador de un establecimiento nocturno</p>
+        <p>me considero una persona con buena capacidad de aprendizaje y con ganas de superacion personal </p>
     </div>
-    <div>Educación
+
+    <div><h2>EDUCACION</h2> 
         <p>estudie una carrera tecnia de sistemas, adicional a esto me he ddedicado a aprender por mi propia cuenta sobre 
             programacion, animacion y diseño
         </p>
     </div>
-    <div>Experiencias Laborales
+
+    <div> <H3>EXPERIENCIAS LABORALES</H3>
         <p>he trabajado en distintos campos , desde como auxiliar en bodegas,mesero, cocinero, despachador, vendedor, recaudador,
              cajero, agente de viajes, y actualmente administracion </p>
     </div>
-    <div>Skills
+
+    <div> <H4> SKILLS</H4>
         <ul>
             <li>conocimientos en software </li>
             <li>conocimientos en hardware</li>
@@ -27,8 +31,12 @@
             <li>adaptabilidad al cambio</li>
         </ul>
     </div>
+
     <div>  <img src="./fotoazul.jpg" alt="fotografia"></div>
-    <div>HOBIES</div>
+    <div> <H5>HOBBIES</H5> 
+        <p>Me gusta la tecnologia , dedicar mi tiempo libre a estar en constante aprendizaje tambien practico deportes y voy constantemente  </p>
+        <p>al gimnasio, soy fanatico del cine y los videojuegos entre otros pasatiempos</p>
+    </div>
 
 </body>
 </html>
