--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -35,7 +35,7 @@
     <div>  <img src="./fotoazul.jpg" alt="fotografia"></div>
     <div> <H5>HOBBIES</H5> 
         <p>Me gusta la tecnologia , dedicar mi tiempo libre a estar en constante aprendizaje tambien practico deportes y voy constantemente  </p>
-        <p>al gimnasio, soy fanatico del cine y los videojuegos entre otros pasatiempos</p>
+        <p>al gimnasio, soy fanatico del cine y los videojuegos entre otros pasatiempos, tambien me dedico a apoyar fundaciones animalistas</p>
     </div>
 
 </body>
